edition = "2023";

package gorums;
option go_package = "github.com/relab/gorums";

option features.field_presence = IMPLICIT;

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
    // call types
    bool rpc        = 50001;
    bool unicast    = 50002;
    bool multicast  = 50003;
    bool quorumcall = 50004;
    // options for call types
    bool per_node_arg = 50020;
}
